--- a/estilo/style.css
+++ b/estilo/style.css
@@ -10,5 +10,9 @@ main{
     background-color: white;
     width: 500px;
     margin: auto;
-    box-shadow: 3px 3px 5px greenyellow;
+    box-shadow: 3px 3px 5px black;
+}
+
+.verde{
+    color: green;
 }
